# FD-CMDS

./: README.md  pyproject.toml
FD-CMDS/: _scan_2dfreq.py  _transientsv3.py  script_v3.py
fd_cmds/: Experiment.py  Scan.py  Untitled.ipynb  _scan_2dfreq.py  _transientsv3.py  script.py
fd_cmds/Experiment/: Experiment.py  __init__.py
fd_cmds/Jupyter Notebooks/.ipynb_checkpoints/: Besemann(2001) coherences-checkpoint.ipynb
fd_cmds/Scan/: Scan.py  __init__.py
fd_cmds/Transients/: __init__.py  _transients.py
