[tool.poetry]
name = "FD-CMDS"
version = "0.1.0"
description = "FD-CMDS is a software package for simulating coherent multidimensinal spectra from expressions in the frequency domain."
authors = ["pcruzparri <peter.cruzparrilla@gmail.com>"]
readme = "README.md"
packages = [{include = "fd_cmds"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
